<resources>
    <string name="app_name">MyMarket</string>
    <string name="email">Correo electronico</string>
    <string name="fullname">Nombre completo</string>
    <string name="password">Contraseña</string>
    <string name="repassword">Repita contraseña</string>
    <string name="login">Iniciar Sesión</string>
    <string name="signup">Registrarse</string>
    <string name="backBtn">Atrás</string>
    <string name="store">Tienda</string>
    <string name="client">Cliente</string>
    <string name="signUpProduct">Registrar producto</string>
    <string name="nameProduct">Nombre del producto</string>
    <string name="descriptionProduct">Descripción del producto</string>
    <string name="priceProuct">Precio</string>
    <string name="stockProduct">Número de existencias</string>
    <string name="myproducts">Mis productos</string>
    <string name="editProduct">Modificar producto</string>
    <string name="deleteProduct">Eliminar producto</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>